[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doe_jog_heart_exp"
version = "0.1.0"
description = "Design of Experiment Project Code for Influence of Jogging on Heart Health and Motivation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]
